loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:3: error: value ti is not a member of Int
  for(x<-1 ti 5){avance()
           ^