loopdowhile.Poucet1.scala.code
do{
  var nbB=0
  for(x<-1 ti 5){avance()
                if(estSurBiscuit()){nbB=nbB+1}}
  if(nbB>=3){gauche()
            }else{droite()}
}while(!sortieTrouvee())